# Humanoid-Robotics-Book

./: .eslintrc.json  .gitignore  .markdownlint.json  docusaurus.config.js  package-lock.json  package.json  test-citations.md
.claude/: settings.local.json
.github/workflows/: github-pages.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: app.py  ingest.py  pyproject.toml
config/: sidebar.js
docs/: chat-assistant.mdx  intro.md
docs/capstone/: evaluation-criteria.md  implementation-guides.md  project-ideas.md
docs/module1/: architecture.md  intro.md  nodes-topics-services.md  packages-workspaces.md  simulation-integration.md
docs/module2/: digital-twin-concepts.md  gazebo-simulation.md  intro.md  physics-engines.md  unity-integration.md
docs/module3/: control-systems.md  intro.md  navigation-systems.md  nvidia-isaac.md  perception-planning.md
docs/module4/: action-planning.md  human-robot-interaction.md  intro.md  language-integration.md  vision-systems.md
history/prompts/001-humanoid-robotics/: 2-create-humanoid-robotics-spec.spec.prompt.md  (+2 more)
references/: robotics-intro.txt
scripts/: citation-validator.js  plagiarism-detector.js  readability-analyzer.js
specs/001-humanoid-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-book-physical-ai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/components/: ChatInterface.js  HomepageFeatures.js
src/css/: custom.css
src/pages/: index.js
(+12 files in other folders)
